--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           git config --local user.name "GitHub Action"
           git config --local user.email "action@github.com"
+          git pull origin main --rebase  # Добавляем эту строку
           git add output.txt
           git commit -m "Update output.txt $(date)" || exit 0
-          git push
+          git push origin main
