--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -23,10 +23,15 @@ jobs:
       - name: Run checker
         run: python vless_checker.py
 
-      - name: Save results
+     - name: Save results
         run: |
           git config --local user.name "GitHub Action"
           git config --local user.email "action@github.com"
+          # Забираем изменения с сервера, чтобы не было конфликта
+          git pull origin main --rebase
+          # Добавляем файл
           git add output.txt
-          git commit -m "Update output.txt $(date)" || exit 0
-          git push
+          # Фиксируем изменения (если они есть)
+          git commit -m "Update output.txt $(date)" || echo "No changes to commit"
+          # Выталкиваем обратно в репозиторий
+          git push origin main
