--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,7 @@ jobs:
       contents: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v4 # Обновили до v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -31,7 +29,10 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Если файла нет, создаем его, чтобы команда add не падала
+          touch output.txt
+          
           git add output.txt
           git commit -m "Update output.txt $(date)" || exit 0
-          # Магия: пушим во временную ветку и сливаем ее в main
           git push origin HEAD:main --force
